--- a/Week2/exercise_one.html
+++ b/Week2/exercise_one.html
@@ -13,6 +13,10 @@
 				$('ul').append('<li>7x Apples</li>');
 				$('ul').append('<ul><li>2x Apples</li><li>2x Gala</li></ul>');
 				$('ul').append('<li>3x Bananas</li>');
+				$('ul').append('<li>10x Carrots</li>');
+				$('ul').append('<li>4x Dates</li>');
+				$('ul').append('<li>6x Eggs</li>');
+				$('ul').append('<ul><li>Medium</li><li>Free-range</li></ul>');
 			});
 		</script>
 	</head>
