Altered Exercise 3 Filters

--- a/Week2/exercise_three.html
+++ b/Week2/exercise_three.html
@@ -11,8 +11,8 @@
 			$('table').css('border', '1px solid black');
 			$('table td').css('height', '40px');
 			$('table td').css('width', '40px');
-			$('table tr:nth-child(2n) td:nth-child(2n)').css('background', 'black');
-			$('table tr:nth-child(2n-1) td:nth-child(2n-1)').css('background', 'black');
+			$('table tr:even td:even').css('background', 'black');
+			$('table tr:odd td:odd').css('background', 'black');
 		});
 		</script>
 
