Fixed selectors Exercise 1

--- a/Week2/exercise_one.html
+++ b/Week2/exercise_one.html
@@ -10,13 +10,13 @@
 			<!-- This ensures we don't run into problems calling elements that have not yet been created -->
 			<!-- as some of you encountered last week in the Christmas Countdown websites -->
 			$(document).ready(function() {
-				$('ul').append('<li>7x Apples</li>');
-				$('ul').append('<ul><li>2x Apples</li><li>2x Gala</li></ul>');
-				$('ul').append('<li>3x Bananas</li>');
-				$('ul').append('<li>10x Carrots</li>');
-				$('ul').append('<li>4x Dates</li>');
-				$('ul').append('<li>6x Eggs</li>');
-				$('ul').append('<ul><li>Medium</li><li>Free-range</li></ul>');
+				$('ul.shopping').append('<li>7x Apples</li>');
+				$('ul.shopping').append('<ul><li>2x Apples</li><li>2x Gala</li></ul>');
+				$('ul.shopping').append('<li>3x Bananas</li>');
+				$('ul.shopping').append('<li>10x Carrots</li>');
+				$('ul.shopping').append('<li>4x Dates</li>');
+				$('ul.shopping').append('<li>6x Eggs</li>');
+				$('ul.shopping').append('<ul><li>Medium</li><li>Free-range</li></ul>');
 			});
 		</script>
 	</head>
