--- a/Week2/exercise_four.html
+++ b/Week2/exercise_four.html
@@ -3,14 +3,7 @@
 	<head>
 	<!-- No help this time - what do you need? -->
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
-	<script type="text/javascript">
-		$(document).ready(function(){
-			$('tr td').each(function(){
-				var rgb = $(this).css("background-color");
-				$(this).text(rgb);
-			});
-		});
-	</script>
+	<script src="resources/js/four.js"></script>
 	</head>
 
 	<body>
