--- a/Week2/exercise_one.html
+++ b/Week2/exercise_one.html
@@ -4,22 +4,7 @@
 		<!-- We import the jQuery script from Google, as described in the lecture slides -->
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
 
-		<script>
-			<!-- We haven't met this yet, but don't panic! -->
-			<!-- jQuery code in this function will run once the document has correctly loaded -->
-			<!-- This ensures we don't run into problems calling elements that have not yet been created -->
-			<!-- as some of you encountered last week in the Christmas Countdown websites -->
-			$(document).ready(function() {
-				$('ul.shopping')
-					.append('<li>7x Apples</li>')
-					.append('<ul><li>2x Apples</li><li>2x Gala</li></ul>')
-					.append('<li>3x Bananas</li>')
-					.append('<li>10x Carrots</li>')
-					.append('<li>4x Dates</li>')
-					.append('<li>6x Eggs</li>')
-					.append('<ul><li>Medium</li><li>Free-range</li></ul>');
-			});
-		</script>
+		<script src="resources/js/one.js"></script>
 	</head>
 
 	<body>
