--- a/Week2/exercise_three.html
+++ b/Week2/exercise_three.html
@@ -6,16 +6,7 @@
 
 		<!-- how do we ensure our jQuery code runs safely? Repeat that here -->
 		<!-- refer to your previous exercises to check -->
-		<script type="text/javascript">
-		$(document).ready(function(){
-			$('table').css('border', '1px solid black');
-			$('table td')
-				.css('height', '40px')
-				.css('width', '40px');
-			$('table tr:even td:even').css('background', 'black');
-			$('table tr:odd td:odd').css('background', 'black');
-		});
-		</script>
+		<script src="resources/js/three.js"></script>
 
 	</head>
 
