--- a/Week3/Exercise3/exercise_three.html
+++ b/Week3/Exercise3/exercise_three.html
@@ -1,2 +1,15 @@
-<!-- try making your HTML and CSS files from scratch this time -->
-<!-- refer to previous exercises if you get stuck -->
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <title>Exercise 3</title>
+
+  <script
+  src="https://code.jquery.com/jquery-3.2.1.min.js"
+  integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4="
+  crossorigin="anonymous"></script>
+  <script src="resources/js/main.js"></script>
+</head>
+<body>
+  
+</body>
+</html>
