--- a/Week4/Exercise1/exercise_one.html
+++ b/Week4/Exercise1/exercise_one.html
@@ -2,21 +2,24 @@
 	<head>
 		<link rel="stylesheet" type="text/css" href="exercise_one.css">
 		<!-- don't forget to import the jQuery library -->
-		
-		
+		<script
+  src="https://code.jquery.com/jquery-3.2.1.min.js"
+  integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4="
+  crossorigin="anonymous"></script>
+
 		<!-- what do we need to do to use any jQuery code? -->
-		
-		
+		<script src="resources/js/main.js"></script>
+
 	</head>
-	
+
 	<body>
 
 		<div id="outermenu">
-			
+
 		</div>
-		
+
 		<div id="content">
 		</div>
-		
+
 	</body>
 </html>
