--- a/Week4/Exercise2/exercise_two.html
+++ b/Week4/Exercise2/exercise_two.html
@@ -2,19 +2,29 @@
 <html>
 	<head>
 		<link rel="stylesheet" type="text/css" href="exercise_two.css">
-		
+
 		<!-- don't forget to import the jQuery library -->
-		
-		
+		<script
+  src="https://code.jquery.com/jquery-3.2.1.min.js"
+  integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4="
+  crossorigin="anonymous"></script>
+
+
 		<!-- what do we need to do to use any jQuery code? -->
-		
-		
+		<script src="resources/js/main.js"></script>
+
+
 	</head>
-	
+
 	<body>
-	
-		<!-- this is the table we want to populate with our XML data... -->
-		<table id="players">
-		</table>
+
+		<h1>Player Statistics</h1>
+		<div id="player">
+		</div>
+
+		<h2>Select a Player Avatar</h2>
+		<ul id="menu">
+
+		</ul>
 	</body>
 </html>
